--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,5 +82,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+
+    implementation 'joda-time:joda-time:2.9.9'
 }
 apply plugin: 'com.google.gms.google-services'
