--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,5 +84,9 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     implementation 'joda-time:joda-time:2.9.9'
+    //Internet Speed
+    implementation 'fr.bmartel:jspeedtest:1.32.1'
+    implementation 'com.github.anastr:speedviewlib:1.3.0'
+    implementation 'com.github.oatrice:internet-speed-testing:1.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
